# deepCNNClassifier

./: .gitignore  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml  setup.cfg  setup.py
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-06-26-06-24-36/train/: events.out.tfevents.1687740880.DESKTOP-3NORG02.9124.0.v2
configs/: config.yaml
prediction_service/: Dockerfile
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05.ipynb  trials.ipynb
research/mlflow_dir/: example.py
src/deepClassifier/components/: prepare_base_model.py
src/deepClassifier/config/: configuration.py
tests/integration/: test_data_ingestion.py
tests/unit/: test_data_ingestion.py  test_utils.py
