# Metadata of the project like licesnce, python requirement
[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3# to run unit test and integration test
    mypy>=0.971 # to check whther there is a typing error or not
    flake8>=5.0.4# To check whether there are intendent errors in the application(to highlight that)
    tox>=3.25.1#it is used to create different working environments and test the application locally
    black>=22.8.0#it is used for formatting the application like standard python structure

[options.package_data]
deepClassifier = py.typed # to avoid the errors(it will not check those packages) if we import some packages that is tensorflow
  
[flake8]
max-line-length = 160
exclude = __init__.py# these files are ignored